<resources>
    <string name="app_name">ShopKeeper</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    /*Auth */
    <string name="btn_sign_out">Sign Out</string>
    <string name="prompt_password">Password Required</string>
    <string name="title_activity_login">Log in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="default_email"> </string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="register">Register</string>
    <string name="Registration">Registration</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Login failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    /*Menu*/
    <string name="title_Prices">Compare Prices</string>
    <string name="title_basket">Shopping List</string>
    <string name="title_Discounts">Featured Discounts</string>
    <string name="title_History">Popular Products</string>
    <string name="title_Register">Register</string>
    /* Shoping List */
    <string name="item_editText_hint">Enter an item</string>
    <string name="add_button_text">Get Total</string>
    <string name="clear_button_text">Clear List</string>

</resources>

